--- a/Arch/work_setup/config
+++ b/Arch/work_setup/config
@@ -57,6 +57,7 @@
     cursor_color = "#aaaaaa"
     font = Source Code Pro Semi-Bold 11
     foreground_color = "#ffffff"
+    scrollbar_position = hidden
     show_titlebar = False
     use_system_font = False
   [[work2]]
@@ -64,6 +65,7 @@
     cursor_color = "#aaaaaa"
     font = Source Code Pro Semi-Bold 11
     foreground_color = "#ffffff"
+    scrollbar_position = hidden
     show_titlebar = False
     use_system_font = False
   [[work3]]
@@ -71,5 +73,6 @@
     cursor_color = "#aaaaaa"
     font = Source Code Pro Semi-Bold 11
     foreground_color = "#ffffff"
+    scrollbar_position = hidden
     show_titlebar = False
     use_system_font = False
